--- a/app.json
+++ b/app.json
@@ -5,6 +5,14 @@
     "version": "1.0.0",
     "assetBundlePatterns": [
       "**/*"
+    ],
+    "plugins": [
+      [
+        "expo-font",
+        {
+          "fonts": ["./assets/fonts/OceanRush.otf"]
+        }
+      ]
     ]
   },
   "name": "HandBook"
